# insurance-api-demo

./: .vercelignore  MCP-README.md  generate-routes.js  integration_test.py  jest.config.ts  mcp-server.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test-mcp.sh  vercel.json
api/: index.py  prompt.txt
app/: layout.tsx  page.tsx
app/api/agents/: route.ts
app/api/agents/[id]/: route.ts
app/api/analytics/claims-summary/: route.ts
app/api/analytics/loss-ratio/: route.ts
app/api/analytics/policies-summary/: route.ts
app/api/audit-trail/: route.ts
app/api/auth/validate/: route.ts
app/api/beneficiaries/: route.ts
app/api/beneficiaries/[id]/: route.ts
app/api/claims/: route.ts
app/api/customers/: route.ts
app/api/documents/: route.ts
app/api/endorsements/: route.ts
app/api/inspections/: route.ts
app/api/notifications/: route.ts
app/api/payments/: route.ts
app/api/policies/: route.ts
app/api/quotes/: route.ts
app/api/reinsurance/: route.ts
app/api/renewals/: route.ts
app/api/risk-assessment/: route.ts
app/api/subrogation/: route.ts
app/api/telematics/: route.ts
app/mcp/: route.ts
components/ui/: badge.tsx
data/: agents.json  beneficiaries.json  claims.json  customers.json  documents.json  fraud-analyses.json  inspections.json  notifications.json  payments.json  policies.json  quotes.json  renewals.json  risk-assessments.json  subrogation.json  telematics.json
lib/: auth.ts  mcp-server.ts  schemas.ts  storage.ts
public/: openapi.yaml
styles/: globals.css
(+21 files in other folders)
