[project]
name = "insurance-api-mcp"
version = "1.0.0"
description = "MCP server for Insurance Management API"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]
